--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,11 @@ body
 {
   background-color: var(--minus);
   padding: 1rem;
+  border-radius: 10px;
+  left: 50%;
+  transform: translateX(-50%);
   text-align: center;
+  position: absolute;
 }
 
 .login-container
@@ -106,6 +110,12 @@ body
   background-color: var(--light-shade-grey);
   color: var(--font-grey);
   border-radius: 10px;
+}
+
+.login-form-button:hover
+{
+  background-color: var(--call-to-action-red);
+  color: var(--black);
 }
 
 .login-form-label
@@ -166,6 +176,7 @@ body
 .sign-in:hover
 {
   background-color: var(--call-to-action-red);
+  color: var(--black);
 }
 .logo
 {
@@ -313,6 +324,11 @@ footer
   background-color: #4c34aa;
 }
 
+.user-links:hover
+{
+  cursor: pointer;
+}
+
 .nav-icon
 {
   background-color: var(--dark-purple-shade);
@@ -375,7 +391,7 @@ footer
 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 320px;
+  align-content: start;
   row-gap: 1rem;
   column-gap: 0.8rem;
   padding: 1rem;
@@ -693,6 +709,9 @@ footer
  {
    grid-area: game-information-button;
    padding: 1rem;
+   display: flex;
+   justify-content: center;
+   align-items: center;
  }
  .game-information-card-text-score
  {
@@ -739,6 +758,7 @@ footer
   padding: 1rem;
   display: flex;
   width: 100%;
+  align-items: center;
  }
 
  .game-info-form-lable
@@ -911,8 +931,27 @@ footer
   margin-top: 0.5rem;
   border-radius: 10px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   font-weight: bold;
+}
+
+.sort select
+{
+  border: none;
+  border-radius: 10px 0 0 10px;
+  padding: 0.5rem;
+  background-color: var(--purple-shade);
+  color: var(--font-grey);
+}
+
+.sort input
+{
+  border: none;
+  border-radius: 0 10px 10px 0;
+  padding: 0.5rem;
+  background-color: var(--dark-purple-shade);
+  color: var(--font-grey);
 }
 
 [data ="Playing"]
@@ -982,6 +1021,7 @@ footer
   {
     display: block;
     animation: myAnim 0.5s ease-in-out 0s 1 normal both;
+    position: absolute;
   }
 
   .logo-nav
@@ -1008,6 +1048,11 @@ footer
   {
     margin-top: 1rem;
   }
+
+  .games-information-card
+ {
+   width: 80%;
+ }
 
 
 }
@@ -1043,7 +1088,7 @@ footer
 
 
 
-  .games-grid
+.games-grid
 {
   grid-template-columns: 1fr;
   justify-items: center;
@@ -1053,6 +1098,11 @@ footer
 {
   width: 300px;
 }
+
+.games-information-card
+ {
+   width: 98%;
+ }
 
 .game-information-card-text
 {
